--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@gnosis.pm/safe-apps-sdk": "^7.8.0",
     "@metamask/detect-provider": "^1.2.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@web3-onboard/core": "^2.12.1",
     "assert": "^2.0.0",
     "axios": "^1.2.2",
     "ethers": "^5.7.0",
