Handle incoming tx req from iframe

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@safe-global/safe-gateway-typescript-sdk": "^3.5.5",
+    "@safe-global/safe-service-client": "^1.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
