--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@web3-onboard/core": "^2.12.1",
     "assert": "^2.0.0",
     "axios": "^1.2.2",
+    "bignumber.js": "^9.0.2",
     "ethers": "^5.7.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
